# wolpertinger

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/athena_polars/: __init__.py  athena_client.py
src/athena_redshift_polars/: __init__.py  athena_client.py
src/owlbear/: __init__.py  athena.py  client.py  trino.py  types.py
tests/: conftest.py  test_athena.py  test_athena_client.py  test_client.py  test_trino.py  test_types.py
