[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "owlbear"
version = "0.2.1"
description = "Feathers and claws for your data lake"
authors = [{name = "J. Justin Donaldson", email = "jjd@jjd.io"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["aws", "athena", "trino", "polars", "data", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "polars>=0.20.0",
    "pyarrow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/jdonaldson/owlbear"
Repository = "https://github.com/jdonaldson/owlbear"
Issues = "https://github.com/jdonaldson/owlbear/issues"

[project.optional-dependencies]
athena = ["boto3>=1.26.0"]
trino = ["trino>=0.320.0"]
all = ["owlbear[athena,trino]"]
dev = [
    "owlbear[all]",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.hatch.build.targets.wheel]
packages = ["src/owlbear"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".direnv/",
    ".envrc",
    "venv/",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
